width on narrow screen fixed

--- a/style/pricetable.scss
+++ b/style/pricetable.scss
@@ -176,6 +176,7 @@
 				object-fit: scale-down;
 				flex-basis: 80%;
 				padding: 10px 0;
+				max-width: 90vw;
 			}
 			div {
 				flex-basis: 20%;
